--- a/helm/go-web-app-chart/templates/ingress.yaml
+++ b/helm/go-web-app-chart/templates/ingress.yaml
@@ -7,14 +7,14 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: go-web-app.local
+  - host: go-web-app-devops-main.local
     http:
       paths: 
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: go-web-app
+            name: go-web-app-devops-main
             port:
               number: 80
 
