--- a/k8s/manifests/deployment.yaml
+++ b/k8s/manifests/deployment.yaml
@@ -2,21 +2,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: go-web-app
+  name: go-web-app-devops-main
   labels:
-    app: go-web-app
+    app: go-web-app-devops-main
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: go-web-app
+      app: go-web-app-devops-main
   template:
     metadata:
       labels:
-        app: go-web-app
+        app: go-web-app-devops-main
     spec:
       containers:
-      - name: go-web-app
-        image: govadoc/go-web-app
+      - name: go-web-app-devops-main
+        image: govadoc/go-web-app-devops-main
         ports:
         - containerPort: 8080
